<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_StateVariables" Id="{090662bb-f994-4448-89b3-eb1775fa2099}">
    <Declaration><![CDATA[TYPE ST_StateVariables :
STRUCT
	fX : 	LREAL := 0.0;
	fXD : 	LREAL := 0.0;
	fTheta : LREAL := 0.0;
	fThetaD : LREAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>